# ros_project_v2

./: Dockerfile  README.md  docker_entrypoint.sh  my_camera_calibration.yaml
ros_ws/devel/lib/pkgconfig/: my_camera_driver.pc
ros_ws/devel/share/my_camera_driver/cmake/: my_camera_driverConfig.cmake
ros_ws/src/my_camera_driver/: CMakeLists.txt
ros_ws/src/my_camera_driver/launch/: camera_and_sensors.launch  ip_camera.launch
ros_ws/src/my_camera_driver/scripts/: camera_node.py  fake_depth_publisher.py  imu_publisher.py  ip_camera_publisher.py  magnetic_marker_publisher.py  sensor_node.py  sensor_publisher.py
